--- a/milestone.ipynb
+++ b/milestone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
     "from statsmodels.graphics.gofplots import qqplot_2samples\n",
+    "from apyori import apriori\n",
     "import numpy as np\n",
     "import math\n",
     "data_path = \"./data/\""
@@ -380,6 +381,100 @@
     "ax.legend(loc=[1,0])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Statistical Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-1. Correlation Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson: 0.1299935274550822\n",
+      "Spearman: 0.1372105386148191\n"
+     ]
+    }
+   ],
+   "source": [
+    "# correlation analysis: host response rate vs. review on communication\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[df['host_response_rate'].notna()] # drop empty response rate\n",
+    "df = df[df['review_scores_communication'].notna()] # drop empty review scores\n",
+    "pearson = df['host_response_rate'].corr(other=df['review_scores_communication'], method='pearson')\n",
+    "spearman = df['host_response_rate'].corr(other=df['review_scores_communication'], method='spearman')\n",
+    "print(\"Pearson:\", pearson)\n",
+    "print(\"Spearman:\", spearman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson: 0.1281814686462352\n",
+      "Spearman: 0.16401471577448987\n"
+     ]
+    }
+   ],
+   "source": [
+    "# correlation analysis: acceptance rate vs. number of reviews\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[df['host_acceptance_rate'].notna()] # drop empty response rate\n",
+    "df = df[df['number_of_reviews'].notna()] # drop empty number of review\n",
+    "pearson = df['host_acceptance_rate'].corr(other=df['number_of_reviews'], method='pearson')\n",
+    "spearman = df['host_acceptance_rate'].corr(other=df['number_of_reviews'], method='spearman')\n",
+    "print(\"Pearson:\", pearson)\n",
+    "print(\"Spearman:\", spearman)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-2. Association Rules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[df['amenities'].notna()] # drop empty response rate\n",
+    "amenities = []\n",
+    "for l in df['amenities']:\n",
+    "    a = l.split(\", \")\n",
+    "    if len(a) > 1:\n",
+    "        amenities.append(a)\n",
+    "\n",
+    "rules=apriori(amenities, min_support=0.05,min_confidence=0.9,min_lift=5)\n",
+    "rules = list(rules)\n",
+    "print(len(rules))\n",
+    "# print(\"Rules:\", len(rules))\n",
+    "# for i in rules: \n",
+    "#     print(i)\n",
+    "#     print(\"\\n\")"
+   ]
   }
  ],
  "metadata": {
@@ -401,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
