test statistics performed for milestone

--- a/milestone.ipynb
+++ b/milestone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from statsmodels.graphics.gofplots import qqplot_2samples\n",
     "from apyori import apriori\n",
     "import numpy as np\n",
+    "from scipy.stats import chi2_contingency, ttest_ind\n",
     "import math\n",
     "data_path = \"./data/\""
    ]
@@ -450,30 +451,168 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2-2. Association Rules"
+    "### 2-2. Chi-Squared Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p value: 0.009850757872282422\n",
+      "Reject null hypothesis: superhost and price are dependent\n"
+     ]
+    }
+   ],
    "source": [
+    "# superhost vs. high price independent or not\n",
+    "# does superhost tend to have higher price listings?\n",
     "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
-    "df = df[df['amenities'].notna()] # drop empty response rate\n",
-    "amenities = []\n",
-    "for l in df['amenities']:\n",
-    "    a = l.split(\", \")\n",
-    "    if len(a) > 1:\n",
-    "        amenities.append(a)\n",
+    "df = df[df['price'] != 0] # drop $0 lists\n",
+    "df = df[df['price'].notna()] # drop empty price\n",
+    "df = df[df['host_is_superhost'].notna()] # drop empty superhost\n",
     "\n",
-    "rules=apriori(amenities, min_support=0.05,min_confidence=0.9,min_lift=5)\n",
-    "rules = list(rules)\n",
-    "print(len(rules))\n",
-    "# print(\"Rules:\", len(rules))\n",
-    "# for i in rules: \n",
-    "#     print(i)\n",
-    "#     print(\"\\n\")"
+    "super_expensive = len(df[(df['host_is_superhost'] == 't') & (df['price'] > 1000)])\n",
+    "super_cheap = len(df[(df['host_is_superhost'] == 't') & (df['price'] <= 1000)])\n",
+    "not_expensive = len(df[(df['host_is_superhost'] == 'f') & (df['price'] > 1000)])\n",
+    "not_cheap = len(df[(df['host_is_superhost'] == 'f') & (df['price'] <= 1000)])\n",
+    "\n",
+    "table = [[super_expensive, super_cheap],[not_expensive, not_cheap]]\n",
+    "result = chi2_contingency(table)\n",
+    "stat = result[0]\n",
+    "p = result[1]\n",
+    "dof = result[2]\n",
+    "\n",
+    "significance_level = 0.05\n",
+    "print(\"p value: \" + str(p)) \n",
+    "if p <= significance_level:\n",
+    "    print('Reject null hypothesis: superhost and price are dependent') \n",
+    "else: \n",
+    "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p value: 0.0\n",
+      "Reject null hypothesis: superhost and review rates are dependent\n"
+     ]
+    }
+   ],
+   "source": [
+    "# superhost vs. review rates\n",
+    "# does superhost have higher reviews?\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[df['review_scores_rating'].notna()] # drop empty price\n",
+    "df = df[df['host_is_superhost'].notna()] # drop empty superhost\n",
+    "\n",
+    "super_good = len(df[(df['host_is_superhost'] == 't') & (df['review_scores_rating'] > 4.5)])\n",
+    "super_bad = len(df[(df['host_is_superhost'] == 't') & (df['review_scores_rating'] <= 4.5)])\n",
+    "not_good = len(df[(df['host_is_superhost'] == 'f') & (df['review_scores_rating'] > 4.5)])\n",
+    "not_bad = len(df[(df['host_is_superhost'] == 'f') & (df['review_scores_rating'] <= 4.5)])\n",
+    "\n",
+    "table = [[super_good, super_bad],[not_good, not_bad]]\n",
+    "result = chi2_contingency(table)\n",
+    "stat = result[0]\n",
+    "p = result[1]\n",
+    "dof = result[2]\n",
+    "\n",
+    "significance_level = 0.05\n",
+    "print(\"p value: \" + str(p)) \n",
+    "if p <= significance_level:\n",
+    "    print('Reject null hypothesis: superhost and review rates are dependent') \n",
+    "else: \n",
+    "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p value: 0.5889169183358403\n",
+      "Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the cheaper the price, the bad the review\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[df['review_scores_rating'].notna()] # drop empty review\n",
+    "df = df[df['host_is_superhost'].notna()] # drop empty superhost\n",
+    "\n",
+    "expensive_good = len(df[(df['price'] > 1000) & (df['review_scores_rating'] > 2.5)])\n",
+    "expensive_bad = len(df[(df['price'] > 1000) & (df['review_scores_rating'] <= 2.5)])\n",
+    "cheap_good = len(df[(df['price'] <= 1000) & (df['review_scores_rating'] > 2.5)])\n",
+    "cheap_bad = len(df[(df['price'] <= 1000) & (df['review_scores_rating'] <= 2.5)])\n",
+    "\n",
+    "table = [[expensive_good, expensive_bad],[cheap_good, cheap_bad]]\n",
+    "result = chi2_contingency(table)\n",
+    "stat = result[0]\n",
+    "p = result[1]\n",
+    "dof = result[2]\n",
+    "\n",
+    "significance_level = 0.05\n",
+    "print(\"p value: \" + str(p)) \n",
+    "if p <= significance_level:\n",
+    "    print('Reject null hypothesis: superhost and review rates are dependent') \n",
+    "else: \n",
+    "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2-3. T-Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p value: 1.0\n",
+      "Fail to reject null hypothesis: we cannot get a conclusion on whether they are equal without more data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bronx vs. manhattan\n",
+    "# host has less listings if they are in manhattan\n",
+    "# Null hypothesis: the mean mean listings in Bronx is greater than the mean listings in Manhattan\n",
+    "\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[df['calculated_host_listings_count'].notna()] # drop empty listings\n",
+    "bronx_df = df[df['neighbourhood_group_cleansed'] == 'Bronx']\n",
+    "manhattan_df = df[df['neighbourhood_group_cleansed'] == 'Manhattan']\n",
+    "\n",
+    "t, p = ttest_ind(bronx_df['calculated_host_listings_count'], manhattan_df['calculated_host_listings_count'], \n",
+    "                equal_var=False, alternative='greater')\n",
+    "significance_level = 0.05\n",
+    "print(\"p value: \" + str(p)) \n",
+    "if p <= significance_level: \n",
+    "    print('Reject null hypothesis') \n",
+    "else: \n",
+    "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are equal without more data')"
    ]
   }
  ],
