updated test statistics for milestone

--- a/milestone.ipynb
+++ b/milestone.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
      "output_type": "stream",
      "text": [
       "p value: 0.009850757872282422\n",
-      "Reject null hypothesis: superhost and price are dependent\n"
+      "Reject null hypothesis: superhost and price are independent\n"
      ]
     }
    ],
@@ -490,22 +490,22 @@
     "significance_level = 0.05\n",
     "print(\"p value: \" + str(p)) \n",
     "if p <= significance_level:\n",
-    "    print('Reject null hypothesis: superhost and price are dependent') \n",
+    "    print('Reject null hypothesis: superhost and price are independent') \n",
     "else: \n",
     "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p value: 0.0\n",
-      "Reject null hypothesis: superhost and review rates are dependent\n"
+      "p value: 1.8011584344690803e-267\n",
+      "Reject null hypothesis: superhost and review rates are independent\n"
      ]
     }
    ],
@@ -516,10 +516,10 @@
     "df = df[df['review_scores_rating'].notna()] # drop empty price\n",
     "df = df[df['host_is_superhost'].notna()] # drop empty superhost\n",
     "\n",
-    "super_good = len(df[(df['host_is_superhost'] == 't') & (df['review_scores_rating'] > 4.5)])\n",
-    "super_bad = len(df[(df['host_is_superhost'] == 't') & (df['review_scores_rating'] <= 4.5)])\n",
-    "not_good = len(df[(df['host_is_superhost'] == 'f') & (df['review_scores_rating'] > 4.5)])\n",
-    "not_bad = len(df[(df['host_is_superhost'] == 'f') & (df['review_scores_rating'] <= 4.5)])\n",
+    "super_good = len(df[(df['host_is_superhost'] == 't') & (df['review_scores_rating'] > 4.8)])\n",
+    "super_bad = len(df[(df['host_is_superhost'] == 't') & (df['review_scores_rating'] <= 4.8)])\n",
+    "not_good = len(df[(df['host_is_superhost'] == 'f') & (df['review_scores_rating'] > 4.8)])\n",
+    "not_bad = len(df[(df['host_is_superhost'] == 'f') & (df['review_scores_rating'] <= 4.8)])\n",
     "\n",
     "table = [[super_good, super_bad],[not_good, not_bad]]\n",
     "result = chi2_contingency(table)\n",
@@ -530,22 +530,22 @@
     "significance_level = 0.05\n",
     "print(\"p value: \" + str(p)) \n",
     "if p <= significance_level:\n",
-    "    print('Reject null hypothesis: superhost and review rates are dependent') \n",
+    "    print('Reject null hypothesis: superhost and review rates are independent') \n",
     "else: \n",
     "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p value: 0.5889169183358403\n",
-      "Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data\n"
+      "p value: 4.800786657350333e-06\n",
+      "Reject null hypothesis: price and review rates are independent\n"
      ]
     }
    ],
@@ -553,14 +553,14 @@
     "# the cheaper the price, the bad the review\n",
     "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
     "df = df[df['review_scores_rating'].notna()] # drop empty review\n",
-    "df = df[df['host_is_superhost'].notna()] # drop empty superhost\n",
+    "df = df[df['price'].notna()] # drop empty host\n",
     "\n",
-    "expensive_good = len(df[(df['price'] > 1000) & (df['review_scores_rating'] > 2.5)])\n",
-    "expensive_bad = len(df[(df['price'] > 1000) & (df['review_scores_rating'] <= 2.5)])\n",
-    "cheap_good = len(df[(df['price'] <= 1000) & (df['review_scores_rating'] > 2.5)])\n",
-    "cheap_bad = len(df[(df['price'] <= 1000) & (df['review_scores_rating'] <= 2.5)])\n",
+    "expensive_good = len(df[(df['price'] > 110) & (df['review_scores_rating'] > 2.5)])\n",
+    "expensive_bad = len(df[(df['price'] > 110) & (df['review_scores_rating'] <= 2.5)])\n",
+    "cheap_good = len(df[(df['price'] <= 110) & (df['review_scores_rating'] > 2.5)])\n",
+    "cheap_bad = len(df[(df['price'] <= 110) & (df['review_scores_rating'] <= 2.5)])\n",
     "\n",
-    "table = [[expensive_good, expensive_bad],[cheap_good, cheap_bad]]\n",
+    "table = [[cheap_bad, cheap_good], [expensive_bad, expensive_good]]\n",
     "result = chi2_contingency(table)\n",
     "stat = result[0]\n",
     "p = result[1]\n",
@@ -569,7 +569,7 @@
     "significance_level = 0.05\n",
     "print(\"p value: \" + str(p)) \n",
     "if p <= significance_level:\n",
-    "    print('Reject null hypothesis: superhost and review rates are dependent') \n",
+    "    print('Reject null hypothesis: price and review rates are independent') \n",
     "else: \n",
     "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are independent without more data') "
    ]
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
      "output_type": "stream",
      "text": [
       "p value: 1.0\n",
-      "Fail to reject null hypothesis: we cannot get a conclusion on whether they are equal without more data\n"
+      "Fail to reject null hypothesis: we cannot get a conclusion on whether they are greater without more data\n"
      ]
     }
    ],
@@ -610,9 +610,9 @@
     "significance_level = 0.05\n",
     "print(\"p value: \" + str(p)) \n",
     "if p <= significance_level: \n",
-    "    print('Reject null hypothesis') \n",
+    "    print('Reject null hypothesis: greater mean') \n",
     "else: \n",
-    "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are equal without more data')"
+    "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are greater without more data')"
    ]
   }
  ],
