machine learning model for milestone

--- a/milestone.ipynb
+++ b/milestone.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,16 @@
     "from apyori import apriori\n",
     "import numpy as np\n",
     "from scipy.stats import chi2_contingency, ttest_ind\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "import math\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "data_path = \"./data/\""
    ]
   },
@@ -613,6 +622,344 @@
     "    print('Reject null hypothesis: greater mean') \n",
     "else: \n",
     "    print('Fail to reject null hypothesis: we cannot get a conclusion on whether they are greater without more data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-1. KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.728402256207469\n",
+      "Accuracy: 0.7205261851576074\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classify superhost T/F w/ response, acceptance rate\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[['host_response_rate', 'host_acceptance_rate', 'host_is_superhost']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_response_rate', 'host_acceptance_rate']]\n",
+    "y_raw = df['host_is_superhost']\n",
+    "y_encode = []\n",
+    "for i in y_raw:\n",
+    "    if (i == 't'): y_encode.append(1)\n",
+    "    else: y_encode.append(0)\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_encode, test_size=0.2, random_state=40)\n",
+    "\n",
+    "knn_model = KNeighborsClassifier()\n",
+    "CV = cross_val_score(knn_model, x, y, cv=5, scoring='accuracy')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "knn_model.fit(x, y) # get the model\n",
+    "print(\"Accuracy:\", knn_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.6963864012181745\n",
+      "Accuracy: 0.6802194256211681\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classify superhost T/F w/ response, acceptance rate, num reviews, review scores, price\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[['host_response_rate', 'host_acceptance_rate', 'number_of_reviews', 'review_scores_rating', 'price', 'host_is_superhost']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_response_rate', 'host_acceptance_rate', 'number_of_reviews', 'review_scores_rating', 'price']]\n",
+    "y_raw = df['host_is_superhost']\n",
+    "y_encode = []\n",
+    "for i in y_raw:\n",
+    "    if (i == 't'): y_encode.append(1)\n",
+    "    else: y_encode.append(0)\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_encode, test_size=0.2, random_state=40)\n",
+    "\n",
+    "knn_model = KNeighborsClassifier()\n",
+    "CV = cross_val_score(knn_model, x, y, cv=5, scoring='accuracy')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "knn_model.fit(x, y) # get the model\n",
+    "print(\"Accuracy:\", knn_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-2. Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.7382696297734336\n",
+      "Accuracy: 0.7244973938942666\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classify superhost T/F w/ response, acceptance rate\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[['host_response_rate', 'host_acceptance_rate', 'host_is_superhost']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_response_rate', 'host_acceptance_rate']]\n",
+    "y_raw = df['host_is_superhost']\n",
+    "y_encode = []\n",
+    "for i in y_raw:\n",
+    "    if (i == 't'): y_encode.append(1)\n",
+    "    else: y_encode.append(0)\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_encode, test_size=0.2, random_state=40)\n",
+    "\n",
+    "logistic_model = LogisticRegression(solver='saga')\n",
+    "CV = cross_val_score(logistic_model, x, y, cv=5, scoring='accuracy')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "logistic_model.fit(x, y) # get the model\n",
+    "print(\"Accuracy:\", logistic_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.6747621749898501\n",
+      "Accuracy: 0.6682800903517263\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classify superhost T/F w/ response, acceptance rate, num reviews, review scores, price\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[['host_response_rate', 'host_acceptance_rate', 'number_of_reviews', 'review_scores_rating', 'price', 'host_is_superhost']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_response_rate', 'host_acceptance_rate', 'number_of_reviews', 'review_scores_rating', 'price']]\n",
+    "y_raw = df['host_is_superhost']\n",
+    "y_encode = []\n",
+    "for i in y_raw:\n",
+    "    if (i == 't'): y_encode.append(1)\n",
+    "    else: y_encode.append(0)\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_encode, test_size=0.2, random_state=40)\n",
+    "\n",
+    "logistic_model = LogisticRegression(solver='saga')\n",
+    "CV = cross_val_score(logistic_model, x, y, cv=5, scoring='accuracy')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "logistic_model.fit(x, y) # get the model\n",
+    "print(\"Accuracy:\", logistic_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-3. Gradient Boosting Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.7459037338897007\n",
+      "Accuracy: 0.7329362124596674\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classify superhost T/F w/ response, acceptance rate\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[['host_response_rate', 'host_acceptance_rate', 'host_is_superhost']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_response_rate', 'host_acceptance_rate']]\n",
+    "y_raw = df['host_is_superhost']\n",
+    "y_encode = []\n",
+    "for i in y_raw:\n",
+    "    if (i == 't'): y_encode.append(1)\n",
+    "    else: y_encode.append(0)\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_encode, test_size=0.2, random_state=40)\n",
+    "\n",
+    "gbc_model = GradientBoostingClassifier()\n",
+    "CV = cross_val_score(gbc_model, x, y, cv=5, scoring='accuracy')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "gbc_model.fit(x, y) # get the model\n",
+    "print(\"Accuracy:\", gbc_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.7859451515409016\n",
+      "Accuracy: 0.7779929009357858\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classify superhost T/F w/ response, acceptance rate, num reviews, review scores, price\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df = df[['host_response_rate', 'host_acceptance_rate', 'number_of_reviews', 'review_scores_rating', 'price', 'host_is_superhost']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_response_rate', 'host_acceptance_rate', 'number_of_reviews', 'review_scores_rating', 'price']]\n",
+    "y_raw = df['host_is_superhost']\n",
+    "y_encode = []\n",
+    "for i in y_raw:\n",
+    "    if (i == 't'): y_encode.append(1)\n",
+    "    else: y_encode.append(0)\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_encode, test_size=0.2, random_state=40)\n",
+    "\n",
+    "gbc_model = GradientBoostingClassifier()\n",
+    "CV = cross_val_score(gbc_model, x, y, cv=5, scoring='accuracy')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "gbc_model.fit(x, y) # get the model\n",
+    "print(\"Accuracy:\", gbc_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-4. Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.0408105531660032\n",
+      "r2: 0.03026949676393076\n"
+     ]
+    }
+   ],
+   "source": [
+    "# price prediction with superhost, neighborhood, room_type, and reviews\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df.loc[(df.host_is_superhost == 't'),'host_is_superhost'] = 1\n",
+    "df.loc[(df.host_is_superhost == 'f'),'host_is_superhost'] = 0\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Manhattan'),'neighbourhood_group_cleansed'] = 0\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Brooklyn'),'neighbourhood_group_cleansed'] = 1\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Queens'),'neighbourhood_group_cleansed'] = 2\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Staten Island'),'neighbourhood_group_cleansed'] = 3\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Bronx'),'neighbourhood_group_cleansed'] = 4\n",
+    "df.loc[(df.room_type == 'Entire home/apt'),'room_type'] = 0\n",
+    "df.loc[(df.room_type == 'Private room'),'room_type'] = 1\n",
+    "df.loc[(df.room_type == 'Hotel room'),'room_type'] = 2\n",
+    "df.loc[(df.room_type == 'Shared room'),'room_type'] = 3\n",
+    "\n",
+    "df = df[['host_is_superhost', 'neighbourhood_group_cleansed', 'room_type', 'review_scores_rating', 'review_scores_rating', 'price']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_is_superhost', 'neighbourhood_group_cleansed', 'room_type', 'review_scores_rating']]\n",
+    "y_raw = df['price']\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_raw, test_size=0.2, random_state=40)\n",
+    "\n",
+    "linear_model = LinearRegression()\n",
+    "CV = cross_val_score(linear_model, x, y, cv=5, scoring='r2')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "linear_model.fit(x, y) # get the model\n",
+    "print(\"r2:\", linear_model.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3-5. Gradient Boosting Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 0.0408105531660032\n",
+      "r2: 0.040618080517494604\n"
+     ]
+    }
+   ],
+   "source": [
+    "# price prediction with superhost, neighborhood, room_type, and reviews\n",
+    "df = pd.read_csv(data_path + \"listings_detail.csv\")\n",
+    "df.loc[(df.host_is_superhost == 't'),'host_is_superhost'] = 1\n",
+    "df.loc[(df.host_is_superhost == 'f'),'host_is_superhost'] = 0\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Manhattan'),'neighbourhood_group_cleansed'] = 0\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Brooklyn'),'neighbourhood_group_cleansed'] = 1\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Queens'),'neighbourhood_group_cleansed'] = 2\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Staten Island'),'neighbourhood_group_cleansed'] = 3\n",
+    "df.loc[(df.neighbourhood_group_cleansed == 'Bronx'),'neighbourhood_group_cleansed'] = 4\n",
+    "df.loc[(df.room_type == 'Entire home/apt'),'room_type'] = 0\n",
+    "df.loc[(df.room_type == 'Private room'),'room_type'] = 1\n",
+    "df.loc[(df.room_type == 'Hotel room'),'room_type'] = 2\n",
+    "df.loc[(df.room_type == 'Shared room'),'room_type'] = 3\n",
+    "\n",
+    "df = df[['host_is_superhost', 'neighbourhood_group_cleansed', 'room_type', 'review_scores_rating', 'review_scores_rating', 'price']]\n",
+    "df = df.dropna()\n",
+    "x_raw = df[['host_is_superhost', 'neighbourhood_group_cleansed', 'room_type', 'review_scores_rating']]\n",
+    "y_raw = df['price']\n",
+    "x, x_test, y, y_test = train_test_split(x_raw, y_raw, test_size=0.2, random_state=40)\n",
+    "\n",
+    "gbr_model = GradientBoostingRegressor()\n",
+    "CV = cross_val_score(linear_model, x, y, cv=5, scoring='r2')\n",
+    "print(\"CV score:\", CV.mean())\n",
+    "\n",
+    "gbr_model.fit(x, y) # get the model\n",
+    "print(\"r2:\", gbr_model.score(x_test, y_test))"
    ]
   }
  ],
