--- a/proposal/proposal.ipynb
+++ b/proposal/proposal.ipynb
@@ -18,7 +18,7 @@
     "from polyglot.detect.base import logger as polyglot_logger\n",
     "polyglot_logger.setLevel(\"ERROR\")\n",
     "import matplotlib.pyplot as plt\n",
-    "data_path = \"./data/\""
+    "data_path = \"../data/\""
    ]
   },
   {
